--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.18",
+    "@vercel/analytics": "^1.1.2",
     "mongoose": "^8.1.0",
     "next": "14.1.0",
     "react": "^18",
